<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="480dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/btn_bg_normal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_title"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/xui_config_color_gray_7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_id" />

            <EditText
                android:id="@+id/dialog_userid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dialog_eid"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_name" />

            <EditText
                android:id="@+id/dialog_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dialog_eid"
                android:inputType="textPersonName|textCapWords"
                android:hint="请输入姓名"
                android:maxLength="5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_medicalNumber" />

            <EditText
                android:id="@+id/dialog_medicalNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/dialog_eid"
                android:hint="请输入病历号"
                android:inputType="number"
                android:digits="@string/alphabet_and_number"
                android:maxLength="15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.xuexiang.xui.widget.button.ButtonView
                android:id="@+id/dialog_close"
                style="@style/RoundButton.Auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/dialog_close"
                android:textColor="@color/xui_config_color_titlebar"
                app:textRadius="5dp"
                app:textSelectedSolidColor="@color/xui_btn_blue_select_color"
                app:textSelectedTextColor="@color/xui_config_color_white"
                app:textSolidColor="@color/xui_config_color_white"
                app:textStrokeColor="@color/xui_config_color_gray_8"
                app:textStrokeWidth="1dp" />

            <com.xuexiang.xui.widget.button.ButtonView
                android:id="@+id/dialog_next"
                style="@style/RoundButton.Auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/dialog_next"
                android:textColor="@color/xui_config_color_white"
                app:textRadius="5dp"
                app:textSelectedSolidColor="@color/xui_btn_blue_select_color"
                app:textSelectedTextColor="@color/xui_config_color_white"
                app:textSolidColor="@color/xui_config_color_titlebar"
                app:textStrokeColor="@color/xui_config_color_white"
                app:textStrokeWidth="1dp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>