<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/config_margin_10dp"
            android:layout_marginEnd="@dimen/config_margin_10dp"
            android:padding="@dimen/config_margin_20dp"
            android:text="@string/active_blood_end"
            android:textSize="@dimen/config_margin_20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/xui_config_color_gray_7" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="@dimen/config_margin_10dp"
            tools:ignore="RtlHardcoded">

            <com.xuexiang.xui.widget.button.ButtonView
                android:id="@+id/dialog_close"
                style="@style/RoundButton.Auto"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/lab_no"
                android:textSize="17sp"
                android:textColor="@color/xui_config_color_titlebar"
                app:textStrokeWidth="1dp" />

            <com.xuexiang.xui.widget.button.ButtonView
                android:id="@+id/dialog_save"
                style="@style/RoundButton.Auto"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="17sp"
                android:layout_weight="1"
                android:text="@string/lab_yes"
                android:textColor="@color/xui_config_color_titlebar" />

        </LinearLayout>

    </LinearLayout>

</layout>